# tex2tex

./: .gitignore  README.md  Readme.md  pyproject.toml  runTests
examples/: example.tex
examples/mappings/: __init__.py  mapping.py
scripts/: installEditableTex2TexCommand
tests/: parserAST_tests.py  parserTokens_tests.py  parser_tests.py
tex2tex/: __init__.py  dsl.py  loadConfiguration.py  parser.py  tex2tex.py  yamlLoader.py
